fix: optimized ui
